# day-ai-agent

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  package-lock.json  package.json
.github/workflows/: lobster.yml  release.yml
jobs/: 2026-03-22-Komorebi_Digital_Systems.md  2026-03-22-Komorebi_Systems.md  2026-03-22-Komorebi_Tech_Solutions.md  2026-03-22-Komorebi_Tech_Systems.md  2026-03-22-Kyoto_Nexus_Technologies.md  2026-03-24-Komorebi_Dynamics.md  2026-03-25-N-A.md  2026-03-26-Komorebi_Financial_Tech.md  2026-03-27-Kyoso_Tech_Solutions.md  2026-03-28-Sora-Link_Technologies.md
src/: agent.rs  config.rs  main.rs
