[package]
name = "lobster-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 2 需要的非同步請求與 JSON 處理套件
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"