[package]
name = "dayai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dayai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
self_update = { version = "0.41", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
toml = "0.8"
rpassword = "7.0"
dirs = "5.0"
dialoguer = "0.11"
chrono = "0.4"
